<resources>
    <string name="app_name">Portfolio</string>

    <string name="action_settings">Settings</string>
    <string name="portfolio_title">My Nanodegree Apps</string>
    <string name="spotify_streamer">SPOTIFY STREAMER</string>
    <string name="scores_app">SCORES APP</string>
    <string name="library_app">LIBRARY APP</string>
    <string name="build_it_bigger">BUILD IT BIGGER</string>
    <string name="bacon_reader">BACON READER</string>
    <string name="capstone">CAPSTONE: MY OWN APP</string>

    <color name="udacity_orange">#F08C35</color>
    <color name="capstone_red">#EE3355</color>
    <color name="light_grey">#EEEEEE</color>
</resources>
