<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:clickable="true"
    android:focusable="true">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/portfolio_title"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="41dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/spotify_streamer"
        android:id="@+id/button"
        android:layout_marginTop="97dp"
        android:width="240dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="16dp"
        android:minHeight="50dp"
        android:background="#F08C35"
        android:layout_marginBottom="10dp"
        android:onClick="handleProjectButtonClick"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scores_app"
        android:id="@+id/button2"
        android:layout_below="@+id/button"
        android:layout_centerHorizontal="true"
        android:width="240dp"
        android:textSize="16dp"
        android:minHeight="50dp"
        android:background="#F08C35"
        android:layout_marginBottom="10dp"
        android:onClick="handleProjectButtonClick" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/library_app"
        android:id="@+id/button3"
        android:layout_below="@+id/button2"
        android:layout_alignLeft="@+id/button2"
        android:layout_alignStart="@+id/button2"
        android:width="240dp"
        android:textSize="16dp"
        android:minHeight="50dp"
        android:background="#F08C35"
        android:layout_marginBottom="10dp"
        android:onClick="handleProjectButtonClick" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/build_it_bigger"
        android:id="@+id/button4"
        android:layout_below="@+id/button3"
        android:layout_centerHorizontal="true"
        android:width="240dp"
        android:textSize="16dp"
        android:minHeight="50dp"
        android:background="#F08C35"
        android:layout_marginBottom="10dp"
        android:onClick="handleProjectButtonClick" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bacon_reader"
        android:id="@+id/button5"
        android:layout_below="@+id/button4"
        android:layout_centerHorizontal="true"
        android:width="240dp"
        android:textSize="16dp"
        android:minHeight="50dp"
        android:background="#F08C35"
        android:layout_marginBottom="10dp"
        android:onClick="handleProjectButtonClick" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/capstone"
        android:id="@+id/button6"
        android:layout_below="@+id/button5"
        android:layout_centerHorizontal="true"
        android:width="240dp"
        android:textSize="16dp"
        android:minHeight="50dp"
        android:background="#ee3355"
        android:layout_marginBottom="10dp"
        android:textColor="#eeeeee"
        android:onClick="handleProjectButtonClick" />


</RelativeLayout>
